package Model.tieFighter;

public interface tieFighterAnimStrategy {
    void animate();
}
